Fixed a bunch of table styling on mobile to fit more in, added desktop-only and mobile-only classes

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ input[type="radio"] {
     visibility: hidden;
 }
 
+.mobile-only {
+    display: none;
+}
+
 .container {
     width: 80%;
     margin: 0 auto;
@@ -1453,31 +1457,49 @@ h1 {
         overflow-x: hidden;
     } */
 
+    .mobile-only {
+        display: block;
+    }
+
+    .desktop-only {
+        display: none;
+    }
+
     .tasks-table {
         height: initial;
         max-height: 120px;
         font-size: 12px;
     }
 
-    .breeds-table th:nth-child(3){
-        display: none
+    .breeds-table {
+        width: 90%;
     }
 
     .breeds-table th {
-        padding-left: 5px;
-        padding-right: 5px;
+        padding-left: 2px;
+        padding-right: 2px;
+        font-size: small;
     }
 
-    .breeds-table th:nth-child(4){
-        display: none
+    /* Make favourite button bigger on mobile */
+    .breeds-table td:nth-child(1) img {
+        width: 50%;
     }
 
-    .breeds-table td:nth-child(3){
-        display: none
+    /* Breed name column */
+    .breeds-table th:nth-child(2), td:nth-child(2){
+        width: 40%;
     }
 
-    .breeds-table td:nth-child(4){
-        display: none
+    /* Make stars smaller on mobile */
+    .breeds-table td:nth-child(5) {
+        font-size: xx-small;
+        letter-spacing: -3px;
+    }
+
+    /* Make size images bigger on mobile */
+    .breeds-table td:nth-child(6) img {
+        width: 90%;
     }
 
     .gmaps-star-rating {
